# locker-api

./: .dockerignore  .editorconfig  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
bruno/: README.md  bruno.json
bruno/Health/: Liveness.bru  Readiness.bru
bruno/Lockers/: Create Locker - Unauthorized.bru  Create Locker.bru  Delete Locker.bru  Get Locker.bru  List Lockers.bru  Nearest Lockers.bru  Update Locker.bru
bruno/Parcels/: Create Parcel - Naive Datetime.bru  Create Parcel - No Slot.bru  Create Parcel.bru  Get Parcel.bru  List Parcels.bru  Transition - Invalid.bru  Transition - To In Locker.bru  Transition - To Picked Up.bru
bruno/environments/: local.bru
migrations/: README  env.py
migrations/versions/: 110a8aa3b842_add_geom_to_lockers.py  286855093ad1_create_lockers_and_locker_slots.py  539ca13f220d_create_parcels.py
src/parcel_locker/: __init__.py  main.py
src/parcel_locker/api/: deps.py  errors.py  health.py  lockers.py  parcels.py
src/parcel_locker/core/: config.py  logging.py  security.py
src/parcel_locker/db/: geo.py  models.py  session.py
src/parcel_locker/domain/: enums.py  exceptions.py
src/parcel_locker/repositories/: locker_repo.py  parcel_repo.py
src/parcel_locker/schemas/: locker.py  parcel.py
src/parcel_locker/services/: geocoding.py  locker_service.py  parcel_service.py
tests/: conftest.py  test_health.py  test_lockers.py  test_parcels.py
